--- a/multiple-rsu-street-congestion/result.ipynb
+++ b/multiple-rsu-street-congestion/result.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ログからデータを抽出しファイルに格納"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -56,6 +63,13 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "filtered-General-#0.elogからextracted_events.jsonを作る"
    ]
   },
   {
@@ -284,20 +298,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "extracted_eventsデータから時刻と通信可能ノードのリスト(receivable_time_id.json)を出す"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def make_receivable_time_id_file(log_folder_path):\n",
+    "\textracted_events_file_path = log_folder_path + \"extracted_events.json\"\n",
+    "\n",
+    "\twith open(extracted_events_file_path, 'r') as f:\n",
+    "\t\textracted_data = json.load(f)\n",
+    "\n",
+    "\t# 必要な情報を抽出して辞書にまとめる\n",
+    "\treceivable_time_id_data = {}\n",
+    "\tfor key, value in extracted_data.items():\n",
+    "\t\treceivable_time_id_data [value[\"startTime\"]] = value[\"receivable_id_list\"]\n",
+    "\t\t\n",
+    "\t# write to the json file\n",
+    "\twith open( log_folder_path + 'receivable_time_id.json', 'w') as f:\n",
+    "\t\tjson.dump(receivable_time_id_data, f, indent=4)\n",
+    "\n",
+    "\n",
+    "# read the json file\n",
+    "speed = 80 # km/hour\n",
+    "booth_change = True\n",
+    "has_multi_proposer = True\n",
+    "proposer_list = [0,1,2]\n",
+    "validator_num = 250\n",
+    "validator_list = [i for i in range(validator_num  + len(proposer_list)) if i not in proposer_list]\n",
+    "\n",
+    "if booth_change:\n",
+    "\tif has_multi_proposer:\n",
+    "\t\tfor proposer_id in proposer_list:\n",
+    "\t\t\tlog_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\" + str(proposer_id) + \"/\"\n",
+    "\t\t\tmake_receivable_time_id_file(log_folder_path)\n",
+    "\telse:\n",
+    "\t\tlog_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\"\n",
+    "\t\tmake_receivable_time_id_file(log_folder_path)\n",
+    "else:\n",
+    "\tlog_folder_path = \"./results/speed\" + str(speed) + \"/\"\n",
+    "\tmake_receivable_time_id_file(log_folder_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "receivable_time_idデータから時刻の合間を補完したextended_time_id.jsonを作成"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ensure_directory_exists(file_path):\n",
-    "    directory = os.path.dirname(file_path)\n",
-    "    if not os.path.exists(directory):\n",
-    "        os.makedirs(directory)\n",
+    "import json\n",
     "\n",
-    "log_folder_path = \"./results/speed\" + str(70) + \"/300vehicle/\"\n",
-    "ensure_directory_exists(log_folder_path)\n",
+    "def make_extended_time_id_file(log_folder_path):\n",
     "\n",
-    "ensure_directory_exists(log_folder_path + str(0) + \"/\")"
+    "\treceivable_time_id_data_path = log_folder_path + 'receivable_time_id.json'\n",
+    "\twith open(receivable_time_id_data_path, 'r') as f:\n",
+    "\t\treceivable_time_id_data  = json.load(f)\n",
+    "\n",
+    "\n",
+    "\tround_time_id_data = {}\n",
+    "\tfor key, value in receivable_time_id_data.items():\n",
+    "\t\tround_time_id_data[str(f\"{round(float(key), 2):.2f}\")] = value\n",
+    "\n",
+    "\n",
+    "\t# order the keys\n",
+    "\tround_time_id_data = dict(sorted(round_time_id_data.items(), key=lambda x: float(x[0])))\n",
+    "\n",
+    "\n",
+    "\textended_time_id_data = {}\n",
+    "\t# 元の辞書のキーと値をループして処理\n",
+    "\tfor key, value in round_time_id_data.items():\n",
+    "\t\t# 新しいキーを追加\n",
+    "\t\textended_time_id_data[key] = value\n",
+    "\n",
+    "\t\t# 小数部を1ずつ増やしながら、指定された範囲のキーが欠けている場合に追加する\n",
+    "\t\tfor decimal in range(1,10):\n",
+    "\t\t\tnew_key = f\"{round(float(key) + decimal * 0.01, 2):.2f}\"\n",
+    "\t\t\t# 小数点第三位で四捨五入\n",
+    "\t\t\tif new_key not in round_time_id_data:  # 新しいキーが元の辞書に存在しない場合\n",
+    "\t\t\t\textended_time_id_data[new_key] = value  # 新しいキーを追加し、空のリストを値として設定\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tbreak\n",
+    "\n",
+    "\t# write to the json file\n",
+    "\twith open( log_folder_path + 'extended_time_id.json', 'w') as f:\n",
+    "\t\tjson.dump(extended_time_id_data, f, indent=4)\n",
+    "\n",
+    "\n",
+    "# read the json file\n",
+    "speed = 80 # km/hour\n",
+    "booth_change = True\n",
+    "has_multi_proposer = True\n",
+    "proposer_list = [0,1,2]\n",
+    "validator_num = 250\n",
+    "validator_list = [i for i in range(validator_num  + len(proposer_list)) if i not in proposer_list]\n",
+    "\n",
+    "if booth_change:\n",
+    "\tif has_multi_proposer:\n",
+    "\t\tfor proposer_id in proposer_list:\n",
+    "\t\t\tlog_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\" + str(proposer_id) + \"/\"\n",
+    "\t\t\tmake_extended_time_id_file(log_folder_path)\n",
+    "\telse:\n",
+    "\t\tlog_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\"\n",
+    "\t\tmake_extended_time_id_file(log_folder_path)\n",
+    "else:\n",
+    "\tlog_folder_path = \"./results/speed\" + str(speed) + \"/\"\n",
+    "\tmake_extended_time_id_file(log_folder_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vguardで用いるデータに整形(communication_data_for_vguard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speed = 80 # km/hour\n",
+    "booth_change = True\n",
+    "has_multi_proposer = True\n",
+    "proposer_list = [0,1,2]\n",
+    "validator_num = 250\n",
+    "validator_list = [i for i in range(validator_num  + len(proposer_list)) if i not in proposer_list]\n",
+    "log_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\"\n",
+    "\n",
+    "\n",
+    "all_communication_data = {}\n",
+    "for proposer_id in proposer_list:\n",
+    "    # communication-data.jsonを読み込む\n",
+    "    with open(log_folder_path + str(proposer_id) + '/extended_time_id.json', 'r') as file:\n",
+    "        proposer_communication_data = json.load(file)\n",
+    "    all_communication_data[proposer_id] = proposer_communication_data\n",
+    "    with open(log_folder_path + str(proposer_id) + '/communication_node_for_vguard_' + str(proposer_id) + '.json', 'w') as file:\n",
+    "        json.dump(all_communication_data[proposer_id], file, indent=4)\n",
+    "\n",
+    "\n",
+    "# validator_listに基づいてバリデータの通信可能なproposerリストを作成\n",
+    "validator_output_data = {validator: {} for validator in validator_list}\n",
+    "\n",
+    "# まず最初に、最初のプロポーザのキーの集合を基準にする\n",
+    "common_keys = set(all_communication_data[proposer_list[0]].keys())\n",
+    "\n",
+    "# proposer_listのすべてのiに対して共通するkeyを取得\n",
+    "for i in range(1, len(proposer_list)):\n",
+    "    # 各プロポーザのキーとの共通集合を更新\n",
+    "    common_keys &= set(all_communication_data[proposer_list[i]].keys())   \n",
+    "\n",
+    "# common_keysの中身を数値に変換してソート\n",
+    "common_keys_as_floats = sorted([float(key) for key in common_keys])\n",
+    "common_keys_as_strings = [f\"{key:.2f}\" for key in common_keys_as_floats]\n",
+    "\n",
+    "\n",
+    "for key in common_keys_as_strings:\n",
+    "    for validator in validator_list:\n",
+    "        # 各バリデータに対して通信可能なプロポーザーリストを収集\n",
+    "        validator_communication_list = []\n",
+    "        for proposer_id in proposer_list:\n",
+    "            # プロポーザーのリストにバリデータが含まれているかをチェック\n",
+    "            if validator in all_communication_data[proposer_id][key]:\n",
+    "                validator_communication_list.append(proposer_id)\n",
+    "        \n",
+    "        # 通信可能なプロポーザーリストを順番通りに保存\n",
+    "        validator_output_data[validator][key] = validator_communication_list\n",
+    "\n",
+    "# communication-data-2.json から communication-data-12.json にデータを保存\n",
+    "for validator_id in validator_list:\n",
+    "    filename = log_folder_path + str(validator_id) + '/communication_node_for_vguard_' + str(validator_id) + '.json'\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(validator_output_data[validator_id], file, indent=4)\n"
    ]
   }
  ],
