--- a/multiple-rsu-street-congestion/result.ipynb
+++ b/multiple-rsu-street-congestion/result.ipynb
@@ -488,6 +488,200 @@
     "    with open(filename, 'w') as file:\n",
     "        json.dump(validator_output_data[validator_id], file, indent=4)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RANDOMな自動車でブロックチェーンを作る場合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import json\n",
+    "\n",
+    "speed = 80 # km/hour\n",
+    "booth_change = True\n",
+    "has_multi_proposer = True\n",
+    "proposer_list = [0,1,2]\n",
+    "validator_num = 250\n",
+    "validator_list = [i for i in range(validator_num  + len(proposer_list)) if i not in proposer_list]\n",
+    "log_folder_path = \"./results/speed\" + str(speed) + \"/250vehicle/\"\n",
+    "\n",
+    "\n",
+    "all_communication_data = {}\n",
+    "for proposer_id in proposer_list:\n",
+    "    # communication-data.jsonを読み込む\n",
+    "    with open(log_folder_path + str(proposer_id) + '/extended_time_id.json', 'r') as file:\n",
+    "        proposer_communication_data = json.load(file)\n",
+    "    all_communication_data[proposer_id] = proposer_communication_data\n",
+    "\n",
+    "# validator_listに基づいてバリデータの通信可能なproposerリストを作成\n",
+    "validator_output_data = {validator: {} for validator in validator_list}\n",
+    "proposer_output_data = {proposer : {} for proposer in proposer_list }\n",
+    "\n",
+    "# まず最初に、最初のプロポーザのキーの集合を基準にする\n",
+    "common_keys = set(all_communication_data[proposer_list[0]].keys())\n",
+    "\n",
+    "# proposer_listのすべてのiに対して共通するkeyを取得\n",
+    "for i in range(1, len(proposer_list)):\n",
+    "    # 各プロポーザのキーとの共通集合を更新\n",
+    "    common_keys &= set(all_communication_data[proposer_list[i]].keys())   \n",
+    "\n",
+    "# common_keysの中身を数値に変換してソート\n",
+    "common_keys_as_floats = sorted([float(key) for key in common_keys])\n",
+    "common_keys_as_strings = [f\"{key:.2f}\" for key in common_keys_as_floats]\n",
+    "\n",
+    "old_communication_2list = []\n",
+    "now_communication_2list = []\n",
+    "random_assigned_list = [[],[],[]]\n",
+    "\n",
+    "\n",
+    "for key in common_keys_as_strings:\n",
+    "\n",
+    "    # ← 修正：初期化をループ外ではなくここで一度だけ\n",
+    "    now_communication_2list = []\n",
+    "    for proposer_id in proposer_list:\n",
+    "        now_communication_2list.append(all_communication_data[proposer_id][key])\n",
+    "\n",
+    "    # random_assigned更新\n",
+    "    if old_communication_2list != now_communication_2list:\n",
+    "        # ← 修正：三重リストをやめ、3分割の一次元リストに\n",
+    "        u = list({x for s in now_communication_2list for x in s})\n",
+    "        random.shuffle(u)\n",
+    "        random_assigned_list = [sorted(u[i::3]) for i in range(3)]\n",
+    "        old_communication_2list = now_communication_2list\n",
+    "\n",
+    "    for proposer_id in proposer_list:\n",
+    "        proposer_output_data[proposer_id][key] = random_assigned_list[proposer_id]\n",
+    "\n",
+    "    # ← 修正：フラットにして整数をキーにする\n",
+    "    pos = {v: i+1 for i, sub in enumerate(random_assigned_list) for v in sub}  # 要素→「何個目のリスト」(1始まり)\n",
+    "    for validator_id in validator_list:\n",
+    "        if pos.get(validator_id) != None:\n",
+    "            validator_output_data[validator_id][key] = [pos.get(validator_id) -1]\n",
+    "        else:\n",
+    "            validator_output_data[validator_id][key] = []\n",
+    "    \n",
+    "\n",
+    "# communication-data-2.json から communication-data-12.json にデータを保存\n",
+    "for proposer_id in proposer_list:\n",
+    "    filename = log_folder_path + str(proposer_id) + '/random_decided_participant_node_' + str(proposer_id) + '.json'\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(proposer_output_data[proposer_id], file, indent=4)   \n",
+    "\n",
+    "\n",
+    "for validator_id in validator_list:\n",
+    "    filename = log_folder_path + str(validator_id) + '/random_decided_participant_node_' + str(validator_id) + '.json'\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(validator_output_data[validator_id], file, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10秒ごとに再抽選"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import json\n",
+    "import math\n",
+    "\n",
+    "speed = \"70_30\"\n",
+    "booth_change = True\n",
+    "has_multi_proposer = True\n",
+    "proposer_list = [0,1,2]\n",
+    "validator_num = 250\n",
+    "validator_list = [i for i in range(validator_num  + len(proposer_list)) if i not in proposer_list]\n",
+    "log_folder_path = \"./results/speed\"+speed+\"/250vehicle/\"\n",
+    "\n",
+    "all_communication_data = {}\n",
+    "for proposer_id in proposer_list:\n",
+    "    # communication-data.jsonを読み込む\n",
+    "    with open(log_folder_path + str(proposer_id) + '/extended_time_id.json', 'r') as file:\n",
+    "        proposer_communication_data = json.load(file)\n",
+    "    all_communication_data[proposer_id] = proposer_communication_data\n",
+    "\n",
+    "# validator_listに基づいてバリデータの通信可能なproposerリストを作成\n",
+    "validator_output_data = {validator: {} for validator in validator_list}\n",
+    "proposer_output_data = {proposer : {} for proposer in proposer_list }\n",
+    "\n",
+    "# まず最初に、最初のプロポーザのキーの集合を基準にする\n",
+    "common_keys = set(all_communication_data[proposer_list[0]].keys())\n",
+    "\n",
+    "# proposer_listのすべてのiに対して共通するkeyを取得\n",
+    "for i in range(1, len(proposer_list)):\n",
+    "    # 各プロポーザのキーとの共通集合を更新\n",
+    "    common_keys &= set(all_communication_data[proposer_list[i]].keys())\n",
+    "\n",
+    "# common_keysの中身を数値に変換してソート\n",
+    "common_keys_as_floats = sorted([float(key) for key in common_keys])\n",
+    "common_keys_as_strings = [f\"{key:.2f}\" for key in common_keys_as_floats]\n",
+    "\n",
+    "# 3秒刻み再抽選用の状態\n",
+    "last_bucket = None                 # 直前の 3 秒バケット（整数）\n",
+    "random_assigned_base = [[], [], []]  # 直近の再抽選で決めた基準割当（可用集合に対して）\n",
+    "\n",
+    "for key in common_keys_as_strings:\n",
+    "    # 現在時刻と3秒バケットを計算\n",
+    "    t = float(key)\n",
+    "    bucket = int(t // 10)\n",
+    "\n",
+    "    # この時刻に通信可のノード集合（各プロポーザの集合の和）\n",
+    "    now_communication_2list = []\n",
+    "    for proposer_id in proposer_list:\n",
+    "        now_communication_2list.append(all_communication_data[proposer_id][key])\n",
+    "    u_current = sorted({x for s in now_communication_2list for x in s})\n",
+    "\n",
+    "    # 3秒バケットが変わったら再抽選\n",
+    "    if bucket != last_bucket:\n",
+    "        u = list(u_current)  # バケット開始時点の可用集合で抽選\n",
+    "        random.shuffle(u)\n",
+    "        random_assigned_base = [sorted(u[i::3]) for i in range(3)]\n",
+    "        last_bucket = bucket\n",
+    "\n",
+    "    # 出力は常に「現在の可用集合」に限定\n",
+    "    # → 同一バケット内でも可用集合が時刻で増減しても、現在いるノードだけを割り当てる\n",
+    "    assigned_now = [\n",
+    "        sorted([v for v in random_assigned_base[i] if v in u_current])\n",
+    "        for i in range(3)\n",
+    "    ]\n",
+    "\n",
+    "    # proposer側の出力（この時刻の可用ノードのみ）\n",
+    "    for proposer_id in proposer_list:\n",
+    "        proposer_output_data[proposer_id][key] = assigned_now[proposer_id]\n",
+    "\n",
+    "    # validator側の出力（どの proposer に割当か：0/1/2、未割当なら []）\n",
+    "    pos = {v: i for i, sub in enumerate(assigned_now) for v in sub}  # 要素→どのリストか(0始まり)\n",
+    "    for validator_id in validator_list:\n",
+    "        if validator_id in pos:\n",
+    "            validator_output_data[validator_id][key] = [pos[validator_id]]\n",
+    "        else:\n",
+    "            validator_output_data[validator_id][key] = []\n",
+    "\n",
+    "# 保存\n",
+    "for proposer_id in proposer_list:\n",
+    "    filename = log_folder_path + str(proposer_id) + '/10s_interval_random_decided_participant_node_' + str(proposer_id) + '.json'\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(proposer_output_data[proposer_id], file, indent=4)\n",
+    "\n",
+    "for validator_id in validator_list:\n",
+    "    filename = log_folder_path + str(validator_id) + '/10s_interval_random_decided_participant_node_' + str(validator_id) + '.json'\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(validator_output_data[validator_id], file, indent=4)\n"
+   ]
   }
  ],
  "metadata": {
